--- a/src/pages/home/landingpage.css
+++ b/src/pages/home/landingpage.css
@@ -1,6 +1,21 @@
+/* fix overflow */
+.row{
+  --bs-gutter-x: 0 !important;
+}
+
+/* hero styling */
 .hero--container {
-  background-image: url("./img/Hero.png");
+  background-image: url("../../assets/Hero.png");
   width: 100%;
-  height: 100vh;
+  height: 80vh;
   background-size: cover;
+  background-position: center;
+}
+
+h1.hero__heading{
+  margin-top: 15%;
+}
+
+.hero__desc{
+  width: 75%;
 }
