--- a/src/pages/forum/forum.css
+++ b/src/pages/forum/forum.css
@@ -29,15 +29,26 @@
 
 .forum__sidebar {
   background-color: var(--bs-primary);
-  height: 700px;
+  height: 100%;
 }
 
 .forum__content {
   width: 100%;
+  height: 1000px;
 }
 
 .forum__sidebar .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: var(--bs-primary);
   background-color: var(--bs-secondary);
+}
+
+.forum__jobs {
+  height: 100%;
+}
+.job-cards {
+  height: 700px;
+}
+.box-shadow {
+  box-shadow: 14px -7px 23px -8px #545454;
 }
