--- a/src/pages/forum/forum.css
+++ b/src/pages/forum/forum.css
@@ -2,11 +2,31 @@
   width: 100%;
 }
 
-.forum--bar {
+.forum--breadcrumbs {
   width: 100%;
-  height: 48px;
   background-color: white;
+  padding: 0.25rem;
+
+  color: #000;
 }
+
+.forum--breadcrumbs .breadcrumb{
+  margin: 0;
+}
+
+.forum--breadcrumbs .breadcrumb a{
+  color: #808080;
+  text-decoration: none;
+}
+.forum--breadcrumbs .breadcrumb a:hover{
+  color: var(--bs-primary);
+  text-decoration: none;
+}
+
+.forum--breadcrumbs .breadcrumb .breadcrumb-item{
+  color:  var(--bs-primary);
+}
+
 
 .forum--banner {
   background: linear-gradient(
