--- a/src/pages/about/aboutpage.css
+++ b/src/pages/about/aboutpage.css
@@ -34,7 +34,7 @@
 }
 
 /* content */
-.content--card div.preview {
+.about .content--card div.preview {
   background-image: url("../../assets/verticalbanner.jpeg");
   background-position: center;
   background-size: 80%;
