--- a/src/index.css
+++ b/src/index.css
@@ -1,63 +1,75 @@
 /* font imports */
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&family=Roboto:wght@400;500;700&display=swap");
 @font-face {
-    font-family: 'Parkson';
-    src: url('./assets/ParksonDemiBold.ttf')  format('truetype'); /* Safari, Android, iOS */
+  font-family: "Parkson";
+  src: url("./assets/ParksonDemiBold.ttf") format("truetype"); /* Safari, Android, iOS */
 }
 @font-face {
-    font-family: 'ParksonOutline';
-    src: url('./assets/ParksonSemiBoldItalicOutline.ttf')  format('truetype'); /* Safari, Android, iOS */
+  font-family: "ParksonOutline";
+  src: url("./assets/ParksonSemiBoldItalicOutline.ttf") format("truetype"); /* Safari, Android, iOS */
 }
-
 
 /* brand */
-.brand{
-    font-family: Parkson;
+.brand {
+  font-family: Parkson;
 }
 
-.brand span{
-    font-family: ParksonOutline;
+.brand span {
+  font-family: ParksonOutline;
 }
-
 
 /* styled texts */
-.hero__heading{
-    font-family: ParksonOutline;
-    font-size: 10rem;
+.hero__heading {
+  font-family: ParksonOutline;
+  font-size: 10rem;
 
-    color: #fff;
+  color: #fff;
 }
-.desc{
-    font-family: Roboto;
-    font-size: 1.2rem;
-}
-
-.heading{
-    font-family: Parkson;
-    font-size: 8rem;
+.desc {
+  font-family: Roboto;
+  font-size: 1.2rem;
 }
 
-.text-left{
-    text-align: left !important;
+.heading {
+  font-family: Parkson;
+  font-size: 8rem;
 }
 
-.text-right{
-    text-align: right !important;
+.text-left {
+  text-align: left !important;
+}
+
+.text-right {
+  text-align: right !important;
 }
 
 /* components */
-.card{
-    background: transparent;
+.card {
+  background: transparent;
 }
-.icon{
-    margin-top: 10px;
-    vertical-align: middle;
-    display: inline-block;
+.icon {
+  margin-top: 10px;
+  vertical-align: middle;
+  display: inline-block;
 }
-footer{
-    background: #2C3E50;
-    height: 80px;
+footer {
+  background: #2c3e50;
+  height: 80px;
 }
 .bs-linebreak {
-    height: 1px;
+  height: 1px;
+}
+
+*::-webkit-scrollbar {
+  width: 20px;
+}
+
+*::-webkit-scrollbar-track {
+  background: rgb(3, 15, 27);
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: var(--bs-primary);
+  border-radius: 25px;
+  border: 3px solid var(--bs-secondary);
 }
