--- a/src/pages/courses/course.css
+++ b/src/pages/courses/course.css
@@ -8,3 +8,16 @@
   width: 100%;
   overflow-y: auto;
 }
+.course-sidebar div.course-sectionlist-item{
+  background-color: #fff !important;
+}
+.course-sidebar div.card-body, div.my-2.card{
+  border-width: 0px 0px 1px 0px !important;
+}
+
+.course-sectionlist-item:hover{
+  cursor: pointer;
+  border: none;
+  box-shadow: 3px 2px 8px rgba(0, 0, 0, 0.25);
+  border-bottom: 1px solid var(--bs-primary) !important;
+}
