--- a/src/pages/courses/course.css
+++ b/src/pages/courses/course.css
@@ -21,3 +21,17 @@
   box-shadow: 3px 2px 8px rgba(0, 0, 0, 0.25);
   border-bottom: 1px solid var(--bs-primary) !important;
 }
+
+.course__container .heading{
+  font-size: 5rem;
+  margin: 0;
+  line-height: 4rem;
+}
+
+.course__container{
+  min-height: 90vh;
+}
+
+.courselist--container .heading{
+  font-size: 6rem;
+}
